# consulns

./: .gitignore  README  README.md  go.mod  go.sum  pyproject.toml  shell.nix
cli/: zones.go
client/: client.go  zone.go
cmd/: cnsc.go  consulns.go
consulns/: __init__.py  const.py
consulns/client/: __init__.py  cli.py  config.py  consul.py  ctx.py  stage.py  zone.py
consulns/daemon/: __init__.py  cache.py  config.py  handler.py  proto.py  store.py
consulns/server/: __init__.py
consulns/store/: __init__.py  consul.py  record.py  stage.py  zone.py
example/: pdns.conf
example/consul/: node-id
handlers/: add_domain_key.go  get_all_domain_metadata.go  get_all_domains.go  get_domain_info.go  get_domain_keys.go  get_domain_metadata.go  initialize.go  list.go  lookup.go  modify_domain_key.go  remove_domain_key.go  set_domain_metadata.go  shared.go
proto/: handler.go  listener.go
store/: consul.go  key.go  store.go  zone.go
